# ToIV

./: .gitignore  README.md
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  capabilities.py  config.py  db.py  deps.py  main.py  models.py  ratelimit.py  security.py  usage.py
apps/api/app/agent/: llm.py  rag.py  runner.py  tools.py
apps/api/app/agent/knowledge/: comfyui-basics.md  generation-guide.md  model-catalog.md  parameter-reference.md  platform-models.md  prompt-tips.md  troubleshooting.md  tutorials.md  workflow-recipes.md
apps/api/app/comfy/: client.py  pool.py  tracker.py
apps/api/app/routes/: account.py  admin.py  agent.py  assembly.py  audio.py  auth.py  generate.py  images.py  jobs.py  manju.py  marketplace.py  models.py  optimize.py  system.py  threed.py  upload.py  video.py
apps/api/app/workflows/: ace_step.py  controlnet.py  facedetailer.py  hunyuan3d.py  img2img.py  inpaint.py  ipadapter.py  lora.py  model_profiles.py  removebg.py  txt2img.py  upscale.py  wan_i2v.py  wan_t2v.py
apps/api/tests/: test_ace_step_builder.py  test_admin.py  test_auth.py  test_controlnet_builder.py  test_facedetailer_builder.py  test_hunyuan3d_builder.py  test_img2img_builder.py  test_inpaint_builder.py  test_ipadapter_builder.py  test_jobs.py  test_marketplace_install.py  test_model_profiles.py  test_optimize.py  test_pool.py  test_r18.py  test_raw_workflow.py  test_removebg_builder.py  test_tracker.py  test_txt2img_builder.py  test_upscale_builder.py  test_wan_i2v_builder.py
deploy/: .env.example  (+7 more)
(+107 files in other folders)
